--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,8 +1,8 @@
 name: PSPanel
 main: me.wild.PlayerServersPanel  # Replace with the actual fully qualified name of your main class
-version: 1.0.0-DEV
+version: 1.0.1-DEV
 author: wildmaster84
-description: Add a panel to manage your player server.
+description: Adds a panel to manage your player server.
 depends: [PlayerServers]
 
 commands:
